TestSuite/Syntax/Errors/Vacation1.tjp
project test "Test" "$Id" 2000-01-01 - 2000-01-31

# Date missing
vacation "Monday off"

